Updated the container css, half done.

--- a/examples/index.html
+++ b/examples/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>viralcss</title>
+    <link rel="icon" href="./viralcss.png" type="image/png">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
 </head>
+
 <body>
     <h1 center>Welcome to viralcss!</h1>
     <br />
@@ -11,6 +17,7 @@
     <br />
 
     <h3>Container</h3>
-    <iframe src="./container.html" frameborder="1" width="800"></iframe>
+    <iframe src="./container.html" frameborder="1" width="1000"  height="500"></iframe>
 </body>
+
 </html>
