Trying to get iframe child element

--- a/examples/container.html
+++ b/examples/container.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Container</title>
     <link rel="stylesheet" href="./css/viralcss.css">
+    <script type="text/javascript" src="./container.js"
 </head>
 
 <body>
@@ -40,9 +41,9 @@
     <br />
     <br />
 
-    <div style="text-align:center">
+    <div id="demo" style="text-align:center">
         <h2>Grid Based</h2>
-        <div class="container">
+        <!-- <div class="container">
             <div class="column-1">1/1</div>
         </div>
         <div class="container">
@@ -143,7 +144,7 @@
             <div class="column-12">1/12</div>
             <div class="column-12">1/12</div>
             <div class="column-12">1/12</div>
-        </div>
+        </div> -->
     </div>
 
     <div>This text is outside of a container style</div>
