--- a/examples/index.html
+++ b/examples/index.html
@@ -17,7 +17,7 @@
     <br />
 
     <h3>Container</h3>
-    <iframe src="./container.html" frameborder="1" width="1000"  height="500"></iframe>
+    <iframe id="container-frame" src="./container.html" frameborder="1" width="1000"  height="500"></iframe>
 </body>
 
 </html>
