Finished flexbox/grid

--- a/examples/container.html
+++ b/examples/container.html
@@ -4,150 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <title>Container</title>
-    <link rel="stylesheet" href="./css/viralcss.css">
-    <script type="text/javascript" src="./container.js"
+    <link rel="stylesheet" type="text/css" href="./css/viralcss.css">
 </head>
 
-<body>
+<body style="text-align:center">
     <div>
         <h2>Column Based</h2>
         <div class="container">
-            <div class="column">
-                This text is a column
-                <div class="row">This text is a row</div>
-                <div class="row">This text is a row2</div>
-            </div>
-            <div class="column">This text is also a column</div>
-            <div class="column">This text is a third column</div>
+            <div class="column">.column</div>
+            <div class="column">.column</div>
+            <div class="column">.column</div>
         </div>
     </div>
 
     <br />
     <br />
 
-    <div>
-        <h2>Row Based</h2>
-        <div class="container">
-            <div class="row">
-                This text is a row
-                <image src="http://sass-lang.com/assets/img/logos/logo-b6e1ef6e.svg" height="50px" />
-                <div>This text is a column</div>
-                <div class="column">This text is also a column</div>
-            </div>
-            <div class="row">This text is a row2</div>
-        </div>
-    </div>
-
-    <br />
-    <br />
-
-    <div id="demo" style="text-align:center">
+    <div id="grid-based">
         <h2>Grid Based</h2>
-        <!-- <div class="container">
-            <div class="column-1">1/1</div>
-        </div>
-        <div class="container">
-            <div class="column-2">1/2</div>
-            <div class="column-2">1/2</div>
-        </div>
-        <div class="container">
-            <div class="column-3">1/3</div>
-            <div class="column-3">1/3</div>
-            <div class="column-3">1/3</div>
-        </div>
-        <div class="container">
-            <div class="column-4">1/4</div>
-            <div class="column-4">1/4</div>
-            <div class="column-4">1/4</div>
-            <div class="column-4">1/4</div>
-        </div>
-        <div class="container">
-            <div class="column-5">1/5</div>
-            <div class="column-5">1/5</div>
-            <div class="column-5">1/5</div>
-            <div class="column-5">1/5</div>
-            <div class="column-5">1/5</div>
-        </div>
-        <div class="container">
-            <div class="column-6">1/6</div>
-            <div class="column-6">1/6</div>
-            <div class="column-6">1/6</div>
-            <div class="column-6">1/6</div>
-            <div class="column-6">1/6</div>
-            <div class="column-6">1/6</div>
-        </div>
-        <div class="container">
-            <div class="column-7">1/7</div>
-            <div class="column-7">1/7</div>
-            <div class="column-7">1/7</div>
-            <div class="column-7">1/7</div>
-            <div class="column-7">1/7</div>
-            <div class="column-7">1/7</div>
-            <div class="column-7">1/7</div>
-        </div>
-        <div class="container">
-            <div class="column-8">1/8</div>
-            <div class="column-8">1/8</div>
-            <div class="column-8">1/8</div>
-            <div class="column-8">1/8</div>
-            <div class="column-8">1/8</div>
-            <div class="column-8">1/8</div>
-            <div class="column-8">1/8</div>
-            <div class="column-8">1/8</div>
-        </div>
-        <div class="container">
-            <div class="column-9">1/9</div>
-            <div class="column-9">1/9</div>
-            <div class="column-9">1/9</div>
-            <div class="column-9">1/9</div>
-            <div class="column-9">1/9</div>
-            <div class="column-9">1/9</div>
-            <div class="column-9">1/9</div>
-            <div class="column-9">1/9</div>
-            <div class="column-9">1/9</div>
-        </div>
-        <div class="container">
-            <div class="column-10">1/10</div>
-            <div class="column-10">1/10</div>
-            <div class="column-10">1/10</div>
-            <div class="column-10">1/10</div>
-            <div class="column-10">1/10</div>
-            <div class="column-10">1/10</div>
-            <div class="column-10">1/10</div>
-            <div class="column-10">1/10</div>
-            <div class="column-10">1/10</div>
-            <div class="column-10">1/10</div>
-        </div>
-        <div class="container">
-            <div class="column-11">1/11</div>
-            <div class="column-11">1/11</div>
-            <div class="column-11">1/11</div>
-            <div class="column-11">1/11</div>
-            <div class="column-11">1/11</div>
-            <div class="column-11">1/11</div>
-            <div class="column-11">1/11</div>
-            <div class="column-11">1/11</div>
-            <div class="column-11">1/11</div>
-            <div class="column-11">1/11</div>
-            <div class="column-11">1/11</div>
-        </div>
-        <div class="container">
-            <div class="column-12">1/12</div>
-            <div class="column-12">1/12</div>
-            <div class="column-12">1/12</div>
-            <div class="column-12">1/12</div>
-            <div class="column-12">1/12</div>
-            <div class="column-12">1/12</div>
-            <div class="column-12">1/12</div>
-            <div class="column-12">1/12</div>
-            <div class="column-12">1/12</div>
-            <div class="column-12">1/12</div>
-            <div class="column-12">1/12</div>
-            <div class="column-12">1/12</div>
-        </div> -->
     </div>
 
-    <div>This text is outside of a container style</div>
+    <div id="grid-based">
+        <h2>Grid Based (Offsets)</h2>
+        <div class="container">
+            <div class="column-6 column-offset-3">.column-6 .column-offset-3</div>
+            <div class="column-2 column-offset-1">.column-2 .column-offset-1</div>
+        </div>
+        <div class="container">
+            <div class="column-2 column-offset-1">.column-2 .column-offset-1</div>
+            <div class="column-3">.column-3</div>
+            <div class="column-2 column-offset-4">.column-2 .column-offset-4</div>
+        </div>
+        <div class="container">
+            <div class="column-6 column-offset-3">.column-6 .column-offset-3</div>
+        </div>
+    </div>
+    <script src="./container.js" defer></script>
 </body>
 
 </html>
