--- a/examples/container.html
+++ b/examples/container.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="./css/viralcss.css">
 </head>
 
-<body style="text-align:center">
+<body id="container-body" style="text-align:center">
     <div>
         <h2>Column Based</h2>
         <div class="container">
