--- a/examples/index.html
+++ b/examples/index.html
@@ -18,6 +18,9 @@
 
     <h3>Container</h3>
     <iframe id="container-frame" src="./container.html" frameborder="1" width="1000"  height="500"></iframe>
+    
+    <h3>Typography</h3>    
+    <iframe id="typography-frame" src="./typography.html" frameborder="1" width="1000"  height="500"></iframe>
 </body>
 
 </html>
